--- a/index.html
+++ b/index.html
@@ -17,15 +17,36 @@
 </div>
 	<div class="content">
 		<li id="s"><font size="6">Cherkasy State Technological University</font></li>
-<p id="k"><font size="5" style="color: white;">
-	Володіння мовами:<br>
-    англійська,російська,українська
-	Мови програмування:<br>
-	HTML,C++,Pascal.
+<p id="k"><font size="3" style="color: white;">
+	Володіння мовами:
+    англійська,російська,українська<br>
+	Мови програмування:
+	HTML,C++,Pascal.<br>
 	Отримані сертифікати:<br>
-	Cisco IT Essentials,Cisco CCNAv7:Introducion to Networks.
+	Cisco IT Essentials,Cisco CCNAv7:Introducion to Networks.<br>
 	Персональні навички:<br>
-	створення мереж,налаштування мереж,конфігурація пристроїв,ремонт техніки,перевірка систем.</font></p>
+   •Вибір і встановлення відповідних комп'ютерних компонентів для створення, ремонту або оновлення персональних
+    комп'ютерів.<br>
+   •Демонстрація безпечних лабораторних процедур.<br>
+   •Належне використання інструментів для виконання профілактичного обслуговування та усунення несправностей на
+    персональних комп'ютерах.<br>
+   •Виконання встановлення, ремонт, обслуговування та усунення несправностей операційних систем Windows.<br>
+   •Пояснення роботу локальних мереж і налаштувати пристрої для підключення до локальних мереж та Інтернету.<br>
+   •Налаштування пристроїв для підключення до Інтернету та хмарних служб.<br>
+   •Пояснення, як налаштовувати, ремонтувати, оновлювати, підтримувати та усувати несправності ноутбуків і мобільних
+    пристроїв.<br>
+   •Пояснення, як налаштувати, захистити та усунути неполадки мобільних операційних систем, OS X і Linux.<br>
+   •Встановлення і надання спільного доступу до принтера відповідно до вимог.<br>
+   •Запровадження базової безпеки хоста, даних і мережі.<br>
+   •Пояснення ролі та обов'язки ІТ-фахівця.<br>
+   •Налаштування комутаторів та кінцевих пристроїв для забезпечення доступу до ресурсів локальної та віддаленої мережі.<br>  
+   •Пояснення,як протоколи фізичного рівня та рівня каналу передачі даних підтримують роботу Ethernet у комутаційній
+    мережі.<br>
+   •Налаштування маршрутизаторів для наскрізного підключення між віддаленими пристроями.<br>
+   •Створення схем адресації IPv4 та IPv6 та перевірка мережевого підключення між пристроями.<br>
+   •Пояснення, як верхні рівні моделі OSI підтримують мережеві програми.<br>
+   •Налаштування невеликої мережі з найкращими методами безпеки.<br>
+   •Вирішення проблем з підключенням у невеликій мережі.</font></p>
 		
 	</div>
 		<div class="right">
