--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>About me</title>
-
+	<title>Головна</title>
 </head>
-<body class="grid">
-<div class="left">
-
-	<img src="un.png">
-	</div>
-	<div class="f">
-	<a href="https://www.instagram.com/Lexa_kniazz/?hl=ru"><img src="in.png" style="width: 30px;"></a>
-</div>
-	<div class="content">
-		<li id="s"><font size="6">Cherkasy State Technological University</font></li>
-<p id="k"><font size="3" style="color: white;">
+<body>
+	<nav><ul>
+	<li><a href="index.html">Головна</a></li>
+		<li><a href="bio.html">Біографія</a></li>
+			</ul>
+		<li id="u"><font size="6" style="color:white;">Cherkasy State Technological University</font></li></nav>
+	<content>
+		<div id="l">
+		<img src="un.png"></div>
+<p><font size="4" style="color: white;">
 	Володіння мовами:
     англійська,російська,українська<br>
 	Мови програмування:
@@ -47,19 +44,16 @@
    •Пояснення, як верхні рівні моделі OSI підтримують мережеві програми.<br>
    •Налаштування невеликої мережі з найкращими методами безпеки.<br>
    •Вирішення проблем з підключенням у невеликій мережі.</font></p>
-		
-	</div>
-		<div class="right">
-			<img src="me.jpg" style="width:500px">
+	</content>
+	<aside id="sidebar">
+		<img src="me.jpg" style="width:87%">
 			<p id="z"><font size="4" style="color: white";>Абросімов Олексій Олегович 03.06.2003<br>
 	        Студент 2 курсу <br>
 	        Черкаський Державний Технологічний Університет України</font></p>
-			<div class="m">
-			<img src="ITE.png" style="width:150px">
-			<img src="CCNA.png" style="width:150px">
-		</div>
-		</div>
-
+			<img src="ITE.png" style="width:100px">
+			<img src="CCNA.png" style="width:100px">
+			<div id="t">
+			<in href="https://www.instagram.com/Lexa_kniazz/?hl=ru"><img src="in.png" style="width: 30px;"></in></div>
+	</aside>
 </body>
-
 </html>
