--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
-	<title>Головна</title>
+	<title>Home</title>
 </head>
 <body>
 	<nav><ul>
+		<div id="n">
 	<li><a href="index.html">Головна</a></li>
-		<li><a href="bio.html">Біографія</a></li>
-			</ul>
-		<li id="u"><font size="6" style="color:white;">Cherkasy State Technological University</font></li></nav>
+		<li><a href="bio.html">Біографія</a></li></div>
+			</ul><li id="u"><font size="6" style="color:white;">Cherkasy State Technological University</font></li></nav>
 	<content>
 		<div id="l">
 		<img src="un.png"></div>
@@ -53,7 +53,7 @@
 			<img src="ITE.png" style="width:100px">
 			<img src="CCNA.png" style="width:100px">
 			<div id="t">
-			<in href="https://www.instagram.com/Lexa_kniazz/?hl=ru"><img src="in.png" style="width: 30px;"></in></div>
+			<a href="https://www.instagram.com/Lexa_kniazz/?hl=ru"><img src="in.png" style="width: 30px;"></a></div>
 	</aside>
 </body>
 </html>
