--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
-	<title>Home</title>
+	<title>Головна</title>
 </head>
 <body>
 	<nav><ul>
 		<div id="n">
 	<li><a href="index.html">Головна</a></li>
-		<li><a href="bio.html">Біографія</a></li></div>
-			</ul><li id="u"><font size="6" style="color:white;">Cherkasy State Technological University</font></li></nav>
+		<li><a href="bio.html">Біографія</a></li>
+			</ul><li id="u"><font size="6" style="color:white;">Cherkasy State Technological University</font></li></div></nav>
 	<content>
 		<div id="l">
 		<img src="un.png"></div>
