--- a/index.html
+++ b/index.html
@@ -1,59 +1,114 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	 <link rel="stylesheet" type="text/css" href="style.css">
 	<title>Головна</title>
 </head>
 <body>
-	<nav><ul>
-		<div id="n">
-	<li><a href="index.html">Головна</a></li>
-		<li><a href="bio.html">Біографія</a></li>
-			</ul><li id="u"><font size="6" style="color:white;">Cherkasy State Technological University</font></li></div></nav>
-	<content>
-		<div id="l">
-		<img src="un.png"></div>
-<p><font size="4" style="color: white;">
-	Володіння мовами:
-    англійська,російська,українська<br>
-	Мови програмування:
-	HTML,C++,Pascal.<br>
-	Отримані сертифікати:<br>
-	Cisco IT Essentials,Cisco CCNAv7:Introducion to Networks.<br>
-	Персональні навички:<br>
-   •Вибір і встановлення відповідних комп'ютерних компонентів для створення, ремонту або оновлення персональних
-    комп'ютерів.<br>
-   •Демонстрація безпечних лабораторних процедур.<br>
-   •Належне використання інструментів для виконання профілактичного обслуговування та усунення несправностей на
-    персональних комп'ютерах.<br>
-   •Виконання встановлення, ремонт, обслуговування та усунення несправностей операційних систем Windows.<br>
-   •Пояснення роботу локальних мереж і налаштувати пристрої для підключення до локальних мереж та Інтернету.<br>
-   •Налаштування пристроїв для підключення до Інтернету та хмарних служб.<br>
-   •Пояснення, як налаштовувати, ремонтувати, оновлювати, підтримувати та усувати несправності ноутбуків і мобільних
-    пристроїв.<br>
-   •Пояснення, як налаштувати, захистити та усунути неполадки мобільних операційних систем, OS X і Linux.<br>
-   •Встановлення і надання спільного доступу до принтера відповідно до вимог.<br>
-   •Запровадження базової безпеки хоста, даних і мережі.<br>
-   •Пояснення ролі та обов'язки ІТ-фахівця.<br>
-   •Налаштування комутаторів та кінцевих пристроїв для забезпечення доступу до ресурсів локальної та віддаленої мережі.<br>  
-   •Пояснення,як протоколи фізичного рівня та рівня каналу передачі даних підтримують роботу Ethernet у комутаційній
-    мережі.<br>
-   •Налаштування маршрутизаторів для наскрізного підключення між віддаленими пристроями.<br>
-   •Створення схем адресації IPv4 та IPv6 та перевірка мережевого підключення між пристроями.<br>
-   •Пояснення, як верхні рівні моделі OSI підтримують мережеві програми.<br>
-   •Налаштування невеликої мережі з найкращими методами безпеки.<br>
-   •Вирішення проблем з підключенням у невеликій мережі.</font></p>
-	</content>
-	<aside id="sidebar">
-		<img src="me.jpg" style="width:87%">
-			<p id="z"><font size="4" style="color: white";>Абросімов Олексій Олегович 03.06.2003<br>
-	        Студент 2 курсу <br>
-	        Черкаський Державний Технологічний Університет України</font></p>
-			<img src="ITE.png" style="width:100px">
-			<img src="CCNA.png" style="width:100px">
-			<div id="t">
-			<a href="https://www.instagram.com/Lexa_kniazz/?hl=ru"><img src="in.png" style="width: 30px;"></a></div>
-	</aside>
+<header>
+	<div class="head-bg">
+			<div class="logo">
+			<h1>Portfolio</h1>
+		<nav class="nav">
+			<button class="drop"></button>
+		<a href=""class="nav-link">Home</a>
+		<a href="#about"class="nav-link">About</a>
+		<a href="#skill"class="nav-link">Skills</a>
+		<a href="#portfolio"class="nav-link">Portfolio</a>
+		<a href="#contact"class="nav-link">Contact</a>
+		</nav></div>
+		<div class="content5"><p class="m1">Hi, It’s Théophile Seyrig</p>
+			<p class="m2">Designer from Porto, Portugal</p></div>
+	</div>
+</header>
+<main>
+	<div class="main-container">
+		<div class="main-content1">
+			<h2 id="about">About</h2>
+			<div class="content1">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div></div>
+		<div class="main-content2">
+			
+			<h3 id="skill">Skills</h3>
+			<div class="content2">
+					<img class="img" src="img/man.png">
+					<div class="stat">
+						<div class="text">
+				<p class="profile">Profile</p>
+				<p class="ux">UX Reseach</p>
+				<p>Tools</p>
+				<p>UI Design</p>
+				<p>Tools</p>
+				<p>Front-end Dev</p>
+				<p>Tools</p>
+					</div>
+					<div class="PB">
+			<p class="u">UI / UX Engineer, Front-end Developer</p>
+			<div class="progressBar1">
+					<div class="barFont1">
+						<p class="p">Paper,Pen,Balsamiq</p></div>
+					<div class="barBack1"></div></div>
+					<div class="progressBar2">
+					<div class="barFont2">
+						<p class="p">Adobe PS, AI, XD, Figma, InVision</p>
+					</div>
+					<div class="barBack2"></div></div>
+					<div class="progressBar3">
+					<div class="barFont3">
+						<p class="p">HTML, CSS, JS, Bootstrap, React</p>
+					</div>
+					<div class="barBack3"></div></div>
+				</div>
+				</div>
+			</div>
+		</div>
+		<div class="main-content3">
+			<h4 id="portfolio">Portfolio</h4>
+			<h5>UX Research</h5>
+			<div class="content3">
+				<div class="ptxt">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. </p></div>
+			<div class="images">
+				<img src="img/ship.png" class="i1">
+		<img src="img/city.png" class="i3">
+		<img src="img/bridge.png" class="i2">
+		<img src="img/house.png" class="i4"></div></div>
+		</div>
+	</div>
+</main>
+<footer>
+		<h6 id="contact">Get In Touch</h6>
+		<div class="content4">
+	<div class="PL"><a href="">Dribbble</a>
+	<a href="">Behance</a>
+<a href="">CodePen</a>
+<a href="">GitHub</a>
+<a href="">Medium</a></div>
+	<div class="SN"><a href="">Linkedln</a>
+	<a href="">Facebook</a>
+<a href="">Instagram</a>
+<a href="">Twitter</a></div>
+	<div class="CT"><a href="">seyrig@mailme.com</a>
+	<a href="">+55 6645 665544</a></div></div>
+
+</footer>
 </body>
 </html>
