--- a/index.html
+++ b/index.html
@@ -10,104 +10,96 @@
 <header>
 	<div class="head-bg">
 			<div class="logo">
-			<h1>Portfolio</h1>
+			<h1>Портфоліо</h1>
 		<nav class="nav">
 			<button class="drop"></button>
-		<a href=""class="nav-link">Home</a>
-		<a href="#about"class="nav-link">About</a>
-		<a href="#skill"class="nav-link">Skills</a>
-		<a href="#portfolio"class="nav-link">Portfolio</a>
-		<a href="#contact"class="nav-link">Contact</a>
+		<a href=""class="nav-link">Головна</a>
+		<a href="#about"class="nav-link">Біографія</a>
+		<a href="#skill"class="nav-link">Навики</a>
+		<a href="#portfolio"class="nav-link">Портфоліо</a>
+		<a href="#contact"class="nav-link">Контакти</a>
 		</nav></div>
-		<div class="content5"><p class="m1">Hi, It’s Théophile Seyrig</p>
-			<p class="m2">Designer from Porto, Portugal</p></div>
+		<div class="content5"><p class="m1">Абросімов Олексій</p>
+			<p class="m2">початковий програміст,студент ЧДТУ</p></div>
 	</div>
 </header>
 <main>
 	<div class="main-container">
 		<div class="main-content1">
-			<h2 id="about">About</h2>
+			<h2 id="about">Біографія</h2>
 			<div class="content1">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>Мене звати Абросімов Олексій Олегович,народився 3 червня 2003р. у місті Черкаси,Черкаської області,Україна.
+Живу в Черкасах до сьогоднішнього дня.
+Закінчив Черкаську спеціалізовану школу I-III ступенів №17 у 2021 році.
+На даний момент навчаюсь в Черкаському Державному Технологічному Університеті на спеціальності кібербезпека на другому курсі навчання.
+До цього займався 5 років бойовим самбо в СК Achilles.
+У 2021 році закінчив автошколу та маю посвідчення водія категорії В.
+Закінчив курси cisco такі як:Cisco IT Essentials та Cisco CCNAv7:Introducion to Networks та маю відповідні сертифікати.
+Розочав курс cisco NDG Linux Essentials.
+Сам по собі я комунікабельний,дружелюбний,завжди готовий допомогти тим чим можу взагалі,приймаю до уваги поради та спокійно приймаю критику в свою сторону.В майбутньому планую влаштуватись в гарну компанію та створити свій сайт з сервером по оренді хостингу зі своїм товаришем.</p>
+			<p>На кінець 2022 року освоїв мови:JavaSkript,HTML5 та CSS3.<br>
+			В наступному році буде освоєно мову програмування Python</p>
 		</div></div>
 		<div class="main-content2">
-			
-			<h3 id="skill">Skills</h3>
+			<div class="h3"><h3 id="skill">Навики</h3></div>
 			<div class="content2">
 					<img class="img" src="img/man.png">
 					<div class="stat">
 						<div class="text">
-				<p class="profile">Profile</p>
-				<p class="ux">UX Reseach</p>
-				<p>Tools</p>
+				<p class="profile">Профіль</p>
+				<p class="ux">Sys.admin</p>
+				<p>Інструменти</p>
 				<p>UI Design</p>
-				<p>Tools</p>
+				<p>Інструменти</p>
 				<p>Front-end Dev</p>
-				<p>Tools</p>
+				<p>Інструменти</p>
 					</div>
 					<div class="PB">
-			<p class="u">UI / UX Engineer, Front-end Developer</p>
+			<p class="u">Sys.admin, UI Design, Front-end Dev</p>
 			<div class="progressBar1">
-					<div class="barFont1">
-						<p class="p">Paper,Pen,Balsamiq</p></div>
-					<div class="barBack1"></div></div>
+					<div class="barFont1"></div>
+					<div class="barBack1"><p class="p"> C++, Python, Multi-Network, Stripper</p></div></div>
 					<div class="progressBar2">
 					<div class="barFont2">
-						<p class="p">Adobe PS, AI, XD, Figma, InVision</p>
 					</div>
-					<div class="barBack2"></div></div>
+					<div class="barBack2"><p class="p">Adobe PS, Figma</p></div></div>
 					<div class="progressBar3">
-					<div class="barFont3">
-						<p class="p">HTML, CSS, JS, Bootstrap, React</p>
-					</div>
-					<div class="barBack3"></div></div>
+					<div class="barFont3"></div>
+					<div class="barBack3">	<p class="p">HTML, CSS, JS</p></div></div>
 				</div>
 				</div>
 			</div>
 		</div>
 		<div class="main-content3">
-			<h4 id="portfolio">Portfolio</h4>
-			<h5>UX Research</h5>
+			<h4 id="portfolio">Портфоліо</h4>
+			<h5>Front-end Developer </h5>
 			<div class="content3">
 				<div class="ptxt">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. </p></div>
+			<p>Мої перші проекти створені за останній місяць.Дану спеціальність я освоїв
+			в ЧДТУ на першому семестрі другого курса навчання.В подальших планах є
+			розвиток своїх навиків в даній сфері та випускати набагато кращі проекти,які 
+			будуть високо цінитись та в майбутньому більших масштабів </p></div>
 			<div class="images">
-				<img src="img/ship.png" class="i1">
-		<img src="img/city.png" class="i3">
-		<img src="img/bridge.png" class="i2">
-		<img src="img/house.png" class="i4"></div></div>
+		<img src="img/lab3.png" class="i1">
+		<img src="img/lab4.png" class="i3">
+		<img src="img/lab2.png" class="i2">
+		<img src="img/lab1.png" class="i4"></div></div>
 		</div>
 	</div>
 </main>
 <footer>
-		<h6 id="contact">Get In Touch</h6>
+	<div class="h6"><h6 id="contact">Зв'язатися зі мною</h6></div>
 		<div class="content4">
-	<div class="PL"><a href="">Dribbble</a>
-	<a href="">Behance</a>
-<a href="">CodePen</a>
-<a href="">GitHub</a>
-<a href="">Medium</a></div>
-	<div class="SN"><a href="">Linkedln</a>
-	<a href="">Facebook</a>
-<a href="">Instagram</a>
-<a href="">Twitter</a></div>
-	<div class="CT"><a href="">seyrig@mailme.com</a>
-	<a href="">+55 6645 665544</a></div></div>
+	<div class="PL"><a href="https://discordapp.com/users/465592779427414048/">Discord</a>
+<a href="https://github.com/CrBunny">GitHub</a>
+</div>
+	<div class="SN">
+	<a href="https://m.facebook.com/finch.finch.18?eav=AfYMW2N4ahaZjYAr48HxyYhLsUIApNA3oR4Leux-vmVXOajEl0pJOWZw8VFUSo8QcP8&ref=wizard&paipv=0">Facebook</a>
+<a href="https://www.instagram.com/Lexa_kniazz/?hl=ru">Instagram</a>
+<a href="https://t.me/Lexa_Bunny">Telegram</a></div>
+	<div class="CT"><a href="mailto:finch100.tf@gmail.com">finch100.tf@gmail.com</a>
+	<a href="">+38(063)9826074</a>
+<a href="">+38(066)2665372</a></div></div>
 
 </footer>
 </body>
